--- a/BuyNow/src/main/webapp/css/style.css
+++ b/BuyNow/src/main/webapp/css/style.css
@@ -4,14 +4,6 @@ body {
 	line-height: 1.7em;
 }
 
-a {
-	color: #333;
-	text-decoration: none;
-}
-
-p {
-	margin: 10px 0;
-}
 
 .container {
 	/*margin: auto;*/
@@ -36,7 +28,7 @@ p {
 	float: left;
 	margin-left: 10px;
 	font-family: Elephant;
-	
+
 }
 
 #navbar ul {
@@ -60,69 +52,10 @@ p {
 	color: #f7c08a;
 }
 
-.userlogo{
+.userlogo {
 	height: 20px;
 }
-
-.slider-frame{
-      overflow: hidden;
-      height: 800px;
-      width: wrap;
-      
-  }
-.slide-images{
+.welcome{
+	background: black;
 	align-items: center;
 }
- @keyframes slide_animation{
-      0% {left:0px;}
-      10% {left:0px;}
-      20% {left:1200px;}
-      30% {left:1200px;}
-      40% {left: 2400px;}
-      50% {left: 2400px;}
-      60% {left: 1200px;}
-      70% {left: 1200px;}
-      80% {left: 0px;}
-      90% {left: 0px;}
-      100% {left:0px;}
-  }
- 
-  @-webkit-keyframes slide_animation{
-      0% {left:0px;}
-      10% {left:0px;}
-      20% {left:1200px;}
-      30% {left:1200px;}
-      40% {left: 2400px;}
-      50% {left: 2400px;}
-      60% {left: 1200px;}
-      70% {left: 1200px;}
-      80% {left: 0px;}
-      90% {left: 0px;}
-      100% {left:0px;}
-  }
- 
-  .slide-images{
-      width: 3600px;
-      height: 800px;
-      margin: 0 0 0 -2400px;
-      position: relative;
-      -webkit-animation-name: slide_animation;
-      animation-name: slide_animation;
-      -webkit-animation-duration: 33s;
-      animation-duration: 33s;
-      -webkit-animation-iteration-count: infinite;
-      animation-iteration-count: infinite;
-      -webkit-animation-direction: alternate;
-      animation-direction: alternate;
-      -webkit-animation-play-state: running;
-      animation-play-state: running;
-  }
- 
-  .img-container{
-      height: 800px;
-      width: 1200px;
-      position: relative;
-      float: left;
-  }
- 
-
