--- a/BuyNow/src/main/webapp/css/style.css
+++ b/BuyNow/src/main/webapp/css/style.css
@@ -1,3 +1,9 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 html,
 body {
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -9,7 +15,9 @@ body {
 	/*margin: auto;*/
 	/*max-width: 1100px;*/
 	overflow: auto;
-
+	height: 50px;
+	padding-top: 5px;
+	
 }
 
 
@@ -18,6 +26,27 @@ body {
 	background: #333;
 	color: #fff;
 	overflow: auto;
+}
+
+ul li ul.list{
+	position: absolute;
+	x-index: 999;
+	display: none;
+}
+
+ul li a:hover{
+	background: blue;
+}
+
+ul li:hover ul.list{
+	
+	display: list-item;
+}
+.list{
+	background: black;
+	width: 100px;
+	-ms-transform-origin-x: 200px;
+	
 }
 
 #navbar a {
@@ -43,19 +72,33 @@ body {
 #navbar ul li a {
 	/*display: block;*/
 	padding: 20px;
-	text-align: center;
+	/*text-align: center;*/
 }
 
 #navbar ul li a:hover,
 #navbar ul li a.current {
 	background: #444;
-	color: #f7c08a;
+	color: rgb(128, 255, 128);
 }
 
 .userlogo {
-	height: 20px;
+	height: 18px;
 }
-.welcome{
-	background: black;
+
+.welcome {
+
+	max-width: wrap;
+	margin: 0;
+	padding: 10px 10px 10px 10px;
 	align-items: center;
+}
+
+.first {
+	font-size: 50px;
+	background: aqua;
+	text-align: center;
+	height: 200px;
+	padding: 80px;
+	border-radius: 20px;
+
 }
