--- a/BuyNow/src/main/webapp/css/style.css
+++ b/BuyNow/src/main/webapp/css/style.css
@@ -32,6 +32,7 @@ ul li ul.list{
 	position: absolute;
 	x-index: 999;
 	display: none;
+	height: auto;
 }
 
 ul li a:hover{
@@ -39,7 +40,7 @@ ul li a:hover{
 }
 
 ul li:hover ul.list{
-	
+	height: auto;
 	display: list-item;
 }
 .list{
@@ -98,7 +99,10 @@ ul li:hover ul.list{
 	background: aqua;
 	text-align: center;
 	height: 200px;
-	padding: 80px;
+	justify-content: center;
+	background-position: center center;
 	border-radius: 20px;
+	display: flex;
+	flex-direction: column;
 
 }
